--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
